--- a/src/components/destinations/Destination.css
+++ b/src/components/destinations/Destination.css
@@ -93,8 +93,8 @@ text-transform: uppercase;
 font-family: Water Brush;
 font-size: 46px;
 font-weight: 400;
-line-height: 67px;
 letter-spacing: 0%;
+margin: 20px;
 text-align: left;
 }
 
