--- a/src/components/reviews/Review.css
+++ b/src/components/reviews/Review.css
@@ -47,6 +47,7 @@
     width: 100%;
     margin: auto;
     display: flex;
+    align-items: center;
     flex-wrap: wrap;
     justify-content: center;
     gap: 15px;
